crates/haneul-swarm-config/tests/snapshots/snapshot_tests__genesis_config_snapshot_matches.snap
---
source: crates/haneul-swarm-config/tests/snapshot_tests.rs
expression: genesis_config
---
ssfn_config_info: ~
validator_config_info: ~
parameters:
  chain_start_timestamp_ms: 0
  protocol_version: 16
  allow_insertion_of_extra_objects: true
  epoch_duration_ms: 86400000
  stake_subsidy_start_epoch: 0
  stake_subsidy_initial_distribution_amount: 1000000000000000
  stake_subsidy_period_length: 10
  stake_subsidy_decrease_rate: 1000
accounts:
  - address: "0x73a6b3c33e2d63383de5c6786cbaca231ff789f4c853af6d54cb883d8780adc0"
    gas_amounts:
      - 30000000000000000
      - 30000000000000000
      - 30000000000000000
      - 30000000000000000
      - 30000000000000000
  - address: "0x73a6b3c33e2d63383de5c6786cbaca231ff789f4c853af6d54cb883d8780adc0"
    gas_amounts:
      - 30000000000000000
      - 30000000000000000
      - 30000000000000000
      - 30000000000000000
      - 30000000000000000
  - address: "0x73a6b3c33e2d63383de5c6786cbaca231ff789f4c853af6d54cb883d8780adc0"
    gas_amounts:
      - 30000000000000000
      - 30000000000000000
      - 30000000000000000
      - 30000000000000000
      - 30000000000000000
  - address: "0x73a6b3c33e2d63383de5c6786cbaca231ff789f4c853af6d54cb883d8780adc0"
    gas_amounts:
      - 30000000000000000
      - 30000000000000000
      - 30000000000000000
      - 30000000000000000
      - 30000000000000000
  - address: "0x73a6b3c33e2d63383de5c6786cbaca231ff789f4c853af6d54cb883d8780adc0"
    gas_amounts:
      - 30000000000000000
      - 30000000000000000
      - 30000000000000000
      - 30000000000000000
      - 30000000000000000

