crates/haneul-swarm-config/tests/snapshots/snapshot_tests__populated_genesis_snapshot_matches-2.snap
---
source: crates/haneul-swarm-config/tests/snapshot_tests.rs
expression: genesis.haneul_system_object().into_genesis_version_for_tooling()
---
epoch: 0
protocol_version: 22
system_state_version: 1
validators:
  total_stake: 20000000000000000
  active_validators:
    - metadata:
        haneul_address: "0x60307f36c284875bf298d4d85a673046648b1ac4b47e712e42ab10d57dd77a26"
        protocol_pubkey_bytes:
          - 153
          - 242
          - 94
          - 246
          - 31
          - 128
          - 50
          - 185
          - 20
          - 99
          - 100
          - 96
          - 152
          - 44
          - 92
          - 198
          - 241
          - 52
          - 239
          - 29
          - 218
          - 231
          - 102
          - 87
          - 242
          - 203
          - 254
          - 193
          - 235
          - 252
          - 141
          - 9
          - 115
          - 116
          - 8
          - 13
          - 246
          - 252
          - 240
          - 220
          - 184
          - 188
          - 75
          - 13
          - 142
          - 10
          - 245
          - 216
          - 14
          - 187
          - 255
          - 43
          - 76
          - 89
          - 159
          - 84
          - 244
          - 45
          - 99
          - 18
          - 223
          - 195
          - 20
          - 39
          - 96
          - 120
          - 193
          - 204
          - 52
          - 126
          - 187
          - 190
          - 197
          - 25
          - 139
          - 226
          - 88
          - 81
          - 63
          - 56
          - 107
          - 147
          - 13
          - 2
          - 194
          - 116
          - 154
          - 128
          - 62
          - 35
          - 48
          - 149
          - 94
          - 189
          - 26
          - 16
        network_pubkey_bytes:
          - 148
          - 228
          - 168
          - 73
          - 49
          - 68
          - 233
          - 230
          - 150
          - 32
          - 140
          - 190
          - 208
          - 2
          - 89
          - 230
          - 221
          - 181
          - 111
          - 151
          - 155
          - 145
          - 195
          - 41
          - 103
          - 86
          - 9
          - 133
          - 190
          - 97
          - 144
          - 155
        worker_pubkey_bytes:
          - 31
          - 42
          - 121
          - 1
          - 168
          - 66
          - 228
          - 211
          - 98
          - 59
          - 198
          - 28
          - 225
          - 193
          - 113
          - 125
          - 46
          - 118
          - 142
          - 15
          - 215
          - 45
          - 248
          - 52
          - 26
          - 245
          - 102
          - 21
          - 185
          - 22
          - 240
          - 56
        proof_of_possession_bytes:
          - 151
          - 191
          - 31
          - 245
          - 62
          - 131
          - 184
          - 23
          - 162
          - 33
          - 124
          - 71
          - 229
          - 10
          - 56
          - 179
          - 47
          - 67
          - 223
          - 65
          - 196
          - 125
          - 67
          - 111
          - 55
          - 104
          - 114
          - 157
          - 166
          - 146
          - 6
          - 104
          - 90
          - 214
          - 33
          - 36
          - 63
          - 93
          - 228
          - 221
          - 166
          - 7
          - 164
          - 61
          - 169
          - 219
          - 78
          - 19
        name: "0"
        description: ""
        image_url: ""
        project_url: ""
        net_address: /ip4/127.0.0.1/tcp/80
        p2p_address: /ip4/127.0.0.1/udp/80
        primary_address: /ip4/127.0.0.1/udp/80
        worker_address: /ip4/127.0.0.1/udp/80
        next_epoch_protocol_pubkey_bytes: ~
        next_epoch_proof_of_possession: ~
        next_epoch_network_pubkey_bytes: ~
        next_epoch_worker_pubkey_bytes: ~
        next_epoch_net_address: ~
        next_epoch_p2p_address: ~
        next_epoch_primary_address: ~
        next_epoch_worker_address: ~
        extra_fields:
          id:
            id: "0x0d3bd666957283976f138919527692165d0a97cdef4a14859f55396394dfaec1"
          size: 0
      voting_power: 10000
      operation_cap_id: "0x734da6b02732262e378f5582a50f930f1ff0e709ee1c180c76ef5aff332f91e6"
      gas_price: 1000
      staking_pool:
        id: "0xef5f2665905b39a44d34f5a97fb9d10b0d211858d9dbe549d235352fb182ca6b"
        activation_epoch: 0
        deactivation_epoch: ~
        haneul_balance: 20000000000000000
        rewards_pool:
          value: 0
        pool_token_balance: 20000000000000000
        exchange_rates:
          id: "0xf98ebe76616fc6f804506539e49ba0c8af53168d572b894bb23df2b044e5b779"
          size: 1
        pending_stake: 0
        pending_total_haneul_withdraw: 0
        pending_pool_token_withdraw: 0
        extra_fields:
          id:
            id: "0xe60e2e2904b3456d3f6db1a5156e04395c8dbfdb39b62a2d8d56ea0764970432"
          size: 0
      commission_rate: 200
      next_epoch_stake: 20000000000000000
      next_epoch_gas_price: 1000
      next_epoch_commission_rate: 200
      extra_fields:
        id:
          id: "0x30082a55162efe04c8c4137d2739ef4ac62faefe7345858169de4422f24798a2"
        size: 0
  pending_active_validators:
    contents:
      id: "0x63a685d959e6e64080ecb897daa29c6036f723f51ff3e1f395ad945eeff0cc84"
      size: 0
  pending_removals: []
  staking_pool_mappings:
    id: "0xbc8eff66712ef94c8f8627ac3e77d071e75175d214ed40131168f917ef08def9"
    size: 1
  inactive_validators:
    id: "0xc80fe5c3bda593b140036a74607e55923fee11706d303f9d992cf256853c6ff4"
    size: 0
  validator_candidates:
    id: "0x1fb1ff9f347cbcb52232b56dcd6c62978d0b6a9684210245aa494547546856f2"
    size: 0
  at_risk_validators:
    contents: []
  extra_fields:
    id:
      id: "0xf532e45b5044b64ec78c2cb907d0f9d9c92cc3241080a75bb88242ea01d54da1"
    size: 0
storage_fund:
  total_object_storage_rebates:
    value: 0
  non_refundable_balance:
    value: 0
parameters:
  epoch_duration_ms: 86400000
  stake_subsidy_start_epoch: 0
  max_validator_count: 150
  min_validator_joining_stake: 30000000000000000
  validator_low_stake_threshold: 20000000000000000
  validator_very_low_stake_threshold: 15000000000000000
  validator_low_stake_grace_period: 7
  extra_fields:
    id:
      id: "0x2928818c1ee5fdc3778e6b292e652ef24bd09a661519a28679b04bd60f0d15c6"
    size: 0
reference_gas_price: 1000
validator_report_records:
  contents: []
stake_subsidy:
  balance:
    value: 9230000000000000000
  distribution_counter: 0
  current_distribution_amount: 1000000000000000
  stake_subsidy_period_length: 10
  stake_subsidy_decrease_rate: 1000
  extra_fields:
    id:
      id: "0x2bb5ef13bea428e7cdf7d338c1d4256ee1648e9ecf9861cb78adcf349e0b0c62"
    size: 0
safe_mode: false
safe_mode_storage_rewards:
  value: 0
safe_mode_computation_rewards:
  value: 0
safe_mode_storage_rebates: 0
safe_mode_non_refundable_storage_fee: 0
epoch_start_timestamp_ms: 10
extra_fields:
  id:
    id: "0x8480b925bae23acf6ba677fb8561dd0fcfd06d19f8748b2d0f481169b36d2783"
  size: 0

